--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <link href="/dist/main.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   <title>Countries</title>
 </head>
 
-<body>
+<body class="bg-gray-100 dark:bg-gray-800">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
